# openal-shortcircuit

./: .gitignore  CMakeLists.txt  README.md  generate-hash.ps1
include/: ALManager.hpp  OpenALAPI.h  OpenALEnum.h  Router.hpp  ShortCircuit.hpp  SourceDistanceModelManager.hpp  Utils.hpp  Vector3.hpp  Visibility.h  XRamManager.hpp
src/: ALCRouter.cpp  ALManager.cpp  ALRouter.cpp  Global.cpp  Router.cpp  ShortCircuit.cpp  ShortCircuitedALCMethods.cpp  ShortCircuitedALMethods.cpp  SourceDistanceModelManager.cpp  Utils.cpp  Vector3.cpp  XRamManager.cpp  tester.cpp
